JumpScript/tests/baselines/reference/accessorsInAmbientContext.errors.txt
tests/cases/compiler/accessorsInAmbientContext.jump(3,13): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.jump(4,13): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.jump(6,20): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.jump(7,20): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.jump(12,9): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.jump(13,9): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.jump(15,16): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/compiler/accessorsInAmbientContext.jump(16,16): error TS1086: An accessor cannot be declared in an ambient context.


==== tests/cases/compiler/accessorsInAmbientContext.jump (8 errors) ====
    declare module M {
        class C {
            get X() { return 1; }
                ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
            set X(v) { }
                ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    
            static get Y() { return 1; }
                       ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
            static set Y(v) { }
                       ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
        }
    }
    
    declare class C {
        get X() { return 1; }
            ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
        set X(v) { }
            ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    
        static get Y() { return 1; }
                   ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
        static set Y(v) { }
                   ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    }